# bgbootload

./: .gitignore  CMakeLists.txt  README.md  bgbootload.ld
app/: BUILD  CMakeLists.txt  EFR32BG1.cmake  app.ld
app/EFR32BG1B/: efr32bg1b_adc.h  efr32bg1b_af_pins.h  efr32bg1b_af_ports.h  efr32bg1b_cryotimer.h  efr32bg1b_devinfo.h  efr32bg1b_dma_descriptor.h  efr32bg1b_gpcrc.h  efr32bg1b_gpio_p.h  efr32bg1b_i2c.h  efr32bg1b_leuart.h  efr32bg1b_pcnt.h  efr32bg1b_romtable.h  efr32bg1b_rtcc_cc.h  efr32bg1b_timer.h  system_efr32bg1b.h
app/gatt/: constants  gatt.xml  gatt_db.h
app/inc/: bg_dfu.h  bg_errorcodes.h  bg_gattdb_def.h  blat.h
app/libs/SEGGER_RTT_V612j/RTT/: SEGGER_RTT.h
app/localdefs/: README.txt
app/src/: aat.c  clkinit.c  main.c  startup.c
bootload/: BUILD  CMakeLists.txt  EFR32BG1.cmake  bgbootload.ld  run.jdebug
bootload/EFR32BG1B/: efr32bg1b_acmp.h  efr32bg1b_cmu.h  efr32bg1b_crypto.h  efr32bg1b_dmareq.h  efr32bg1b_emu.h  efr32bg1b_fpueh.h  efr32bg1b_gpio.h  efr32bg1b_idac.h  efr32bg1b_ldma.h  efr32bg1b_ldma_ch.h  efr32bg1b_letimer.h  efr32bg1b_msc.h  efr32bg1b_prs.h  efr32bg1b_prs_ch.h  efr32bg1b_prs_signals.h  efr32bg1b_rmu.h  efr32bg1b_rtcc.h  efr32bg1b_rtcc_ret.h  efr32bg1b_timer_cc.h  efr32bg1b_usart.h  efr32bg1b_wdog.h  efr32bg1b_wdog_pch.h  em_device.h
bootload/gatt/: constants  gatt.bgproj  gatt.xml  gatt_db.h
bootload/inc/: aat_def.h  dfu.h  flash.h  gecko_configuration.h  native_gecko.h
bootload/libs/SEGGER_RTT_V612j/RTT/: SEGGER_RTT_Syscalls_GCC.c
bootload/localdefs/: README.txt
bootload/src/: aat.c  boot_main.c  clkinit.c  dfu.c  dfu_main.c  em_crypto.c  flash.c  main.c  startup.c
client/: BG_OTA.apk  otadfu-release.apk
client/source/: DFULoader.java  FirmwareLoader.java  README.txt
gatt/: constants  gatt.bgproj  gatt.xml  gatt_db.c  gatt_db.h
inc/: aat_def.h  bg_types.h  flash.h  io.h
libs/SEGGER_RTT_V612j/RTT/: SEGGER_RTT_Conf.h
localdefs/: README.txt
src/: aat.c  em_msc.c  main.c  startup.c
utils/: BUILD  CMakeLists.txt  elf.c  elf.h  firmware.c  vector.c  vector.h
